me-worldwind: Try to fix world wind init issue